<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Editar datos"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:paddingLeft="30dp"
                android:text="Nombre: "
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/editarNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:textColor="@color/primaryText"
                android:text="@string/editarNombre"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editarFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:textColor="@color/primaryText"
                android:text="@string/editarFecha"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:paddingLeft="30dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:textColor="@color/primaryText"
                android:paddingLeft="30dp"
                android:text="Teléfono: "
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/editarTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:textColor="@color/primaryText"
                android:text="@string/editarTelefono"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:paddingLeft="30dp"
                android:text="Email: "
                android:textColor="@color/primaryText"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
                android:id="@+id/editarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/editarEmail"
            android:textAlignment="textStart"
                android:textColor="@color/primaryText"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:textColor="@color/primaryText"
                android:paddingLeft="30dp"
                android:text="Descripción: "
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-16dp" />

            <TextView
            android:id="@+id/editarDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/editarDescripcion"
            android:textAlignment="textStart"
                android:textColor="@color/primaryText"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp" />

        </LinearLayout>


        <Button
            android:id="@+id/atras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:text="@string/editarDatos"
            android:background="@color/colorPrimaryDark"
            ></Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>